fixed jumbotron and inclusions here and there

--- a/sections/NetherlandsElections.pug
+++ b/sections/NetherlandsElections.pug
@@ -1,9 +1,11 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='/css/index.css')
+
     link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/pages.css')
+    script(type='text/javascript', src='/js/lodash.min.js')
     script(type='text/javascript', src='/js/jquery.js')
     script(type='text/javascript', src='/js/collapse.js')
     script(type='text/javascript', src='/js/bootstrap.min.js')
