--- a/sections/alarms.pug
+++ b/sections/alarms.pug
@@ -1,14 +1,14 @@
 doctype html
 html
     head
-        link(rel='stylesheet', href='/css/index.css')
+
         link(rel='stylesheet', href='/css/bootstrap.css')
-        link(rel='stylesheet', href='/css/c3.css')
+        link(rel='stylesheet', href='/css/index.css')
+        script(type='text/javascript', src='/js/lodash.min.js')
         script(type='text/javascript', src='/js/jquery.js')
         script(type='text/javascript', src='/js/collapse.js')
-        script(type='text/javascript', src='/js/d3.min.js')
-        script(type='text/javascript', src='/js/c3.min.js')
-        script(type='text/javascript', src='/js/lodash.min.js')
+        script(type='text/javascript', src='/js/bootstrap.min.js')
+
         script(type='text/javascript', src='/js/local/alarms.js')
         title Alarm page
 
