added french election analysis

--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -29,6 +29,9 @@ html
       h3 Experiments done
       ul.fb--icon-list
         li
+          a(href="https://medium.com/@trackingexposed/facebook-algorithm-and-impact-on-media-french-election-experiment-1-d760ed5a242f" target="_blank") French election experiment
+          |  Our preliminary publication on how the same media got differentiated coverage
+        li
           a(href="/NetherlandsElections") The Netherlands elections call
           |, and the 
           a(href="https://www.oneworld.nl/deze-tool-checkt-facebook-echt-de-verkiezingen-beinvloedt" target="_blank") OneWorld
