--- a/sections/alpha.pug
+++ b/sections/alpha.pug
@@ -1,25 +1,22 @@
-block alpha
-  h2 The experience got during the Alpha
+h3 The experience got during the Alpha
 
-  p The initial development phase went since June 2016 to September, then the alpha stage last since the begin of September to the begin of December. The goal of the alpha was showing the project, get person engaged, understand assets, concerns and priorities. It went fairly well:
-  ul.fb--icon-list
-    li A team has been created, partnership are explored, along a refined vision for the project
-    li Privacy issues has been discussed and, a 
-      a(href="/privacy-statement") Privacy Statement
-      |  has been defined and specified 
-    li new technologies will mode facebook.tracking.exposed in a more sustainable ecosystem, check the 
-      a(href="/beta") Beta announcement
-      |.
-    li ← This, is our new 
-      a(href="https://github.com/tracking-exposed/logos") logo
-      |!
-    li We broke the previous visualisation, they will be restored and new will comes.
-    li Four 
-      a(href="/initiatives") talks
-      |  has been done on this subject, helping us to reach 95 users in this phase.
-    li We broke the previous visualisations! The database format is changed and the previous approach has stop to work by the end of November… showing the intrinsic limits of the prototypal technology :)
-  img(src="/images/posttype-alpha.png")
+p The initial development phase went since June 2016 to September, then the alpha stage last since the begin of September to the begin of December. The goal of the alpha was showing the project, get person engaged, understand assets, concerns and priorities. It went fairly well:
 
-  p The new phase has still a publicly downloadale database and 
-    a(href="/impact") open data describing our collected meta data
+ul.fb--icon-list
+  li A team has been created, partnership are explored, along a refined vision for the project
+  li Language and word based parsers are awful, but sometime are necessary. This require an infrastructure replanning, because the languages in the world are many and do not exists only English.
+  li Privacy issues has been discussed and, a 
+    a(href="/privacy-statement") Privacy Statement
+    |  has been defined and specified 
+  li Four 
+    a(href="/initiatives") talks
+    |  has been done on this subject, helping us to reach 95 users in this phase.
+  li We broke the previous visualisations, The database format is changed and the previous approach has stop to work by the end of November… showing the intrinsic limits of the prototypal technology :)
+
+h3 Why the parsing can't be client side?
+p because Facebook changes often the HTML structure, and sometime changes only for a small group of users. The analysis might be broken most of the time if we do that, and we can measure it only when it is later. #truestory:
+img(src="/images/posttype-alpha.png")
+
+p The new phase has still a publicly downloadale database and 
+  a(href="/impact") open data describing our collected meta data
 
