--- a/sections/beta.pug
+++ b/sections/beta.pug
@@ -1,9 +1,10 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='/css/index.css')
-    link(href='/js/local/EB+Garamond-Font.css', rel='stylesheet')
+
     link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/index.css')
+
     script(type='text/javascript', src='/js/lodash.min.js')
     script(type='text/javascript', src='/js/jquery.js')
     script(type='text/javascript', src='/js/collapse.js')
@@ -12,7 +13,15 @@ html
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title Welcome to the ß phase of facebook.tracking.exposed
+    meta(name="keywords" content="facebook.tracking.exposed alpha beta")
+    meta(property="og:title" content="facebook.tracking.exposed alpha & beta")
+    meta(property="og:type" content="website")
+    meta(property="og:description" content="facebook.tracking.exposed Considerations after the alpha, and announcment of the Beta")
+    meta(property="og:url" content="https://facebook.tracking.exposed")
+    meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
+    meta(property="og:image:width" content="400")
+    meta(property="og:image:height" content="400")
+    title Alpha considerations and Beta announcement
 
   body
  
@@ -45,10 +54,14 @@ html
     p feel free to remove TamperMonkey and the previous extension. Thank You for your support. The insight we get has been necessary to reach this stage of maturity.
     p Note: the database of the alpha has been deleted from tracking.exposed server and there are no backup: decision has been took because was pointless preserve data with an uncertain privacy model.
 
+    include alpha
+
     h2 Interested? 
-    p The problem addressed here is huge and cross sector. There are things to be done if you are a social analyst, software developer, community manager, graphic designer, fundraiser. The time is tight: self-management and shared vision has to be enough in this phase. Unlucky we can't offer any money yet. The project is alive since 6 months, another 3 month roadmap is defined between the beta in  December and first stable release in March 2017. Only this promise can be make: if you get onboard and we share a goal, your effort will not be wasted and you'll be credited as best as can be done. Feel free to contact 
+    p The problem addressed here is huge and cross sector. There are things to be done if you are a social analyst, software developer, community manager, graphic designer, fundraiser. The time is tight: self-management and shared vision has to be enough in this phase. Unlucky we can't offer any money yet. The project is alive since 6 months, another 3 month roadmap is defined between the beta in  December and first stable release in 
+      span(style='{text-decoration: "line-through";}') March 
+      | August 2017. Only this promise can be make: if you get onboard, your effort will not be wasted and you'll be credited (and paid if we ever got fund) as best as can be done. Please get in touch: 
       i claudio ﹫tracking・exposed 
-      | for that, [replacing ﹫ and ・]
+      | [replace ﹫ and ・]
 
     div.footer 
 
