--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -38,7 +38,7 @@ html
           |'s call for action
         li
           a(href="/beta") beta
-          |  updates, for supporters and technologiest
+          |  announcement. Lesson learn and what's new. For supporters and technologist
 
       h3 Running experiments
       ul.fb--icon-list
