--- a/sections/impact.pug
+++ b/sections/impact.pug
@@ -25,7 +25,7 @@ html
         meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
         meta(property="og:image:width" content="400")
         meta(property="og:image:height" content="400")
-        title Adoption trends, metadata extraction, daily and long term statistics
+        title Adoption trends, metadata extraction and open statistics
 
     body(onload="fillUsersGraphs('#goldmine', '#users'); fillMetadataGraph('#metadata');")
     
@@ -67,6 +67,16 @@ html
         .simpletext
             h2 Impressions collected
         div(id="goldmine")
+
+    .container-fluid
+        .simpletext
+            h2 Timelines by Country
+        div(id="contribcountries")
+
+    .container-fluid
+        .simpletext
+            h2 Views by Country
+        div(id="viewscountries")
 
     .container-fluid
         .simpletext
