added viz on users engagement

--- a/sections/impact.pug
+++ b/sections/impact.pug
@@ -63,26 +63,26 @@ html
             h2 Supporters, Page views
         div(id="users")
 
-    .container-fluid
-        .simpletext
-            h2 Impressions collected
-        div(id="goldmine")
-
-    .container-fluid
-        .simpletext
-            h2 Timelines by Country
-        div(id="contribcountries")
-
-    .container-fluid
         .simpletext
             h2 Views by Country
         div(id="viewscountries")
 
-    .container-fluid
+        .simpletext
+            h2 Timelines by Country
+        div(id="contribcountries")
+
+        .simpletext
+            h2 Impressions collected
+        div(id="goldmine")
+
         .simpletext
             h2 Metadata available
             p The analysis is made by the parser, 
                 a(href="https://github.com/tracking-exposed/facebook/issues/44") try to see how they works
         div(id="metadata")
+
+        .simpletext
+            h2 How much an user keep using the extension?
+        div(id="engagement")
 
     div.footer
