new revisited realitycheck

--- a/sections/header.pug
+++ b/sections/header.pug
@@ -4,7 +4,7 @@ block header
     div.jumbotron
       div.col-xs-8.col-sm-8.col-md-8.col-lg-8
         p < 
-          img(src="/images/github-256.png" width=24 height=24)
+          img#logoimg(src="/images/github-256.png" width=24 height=24)
           a(href="https://github.com/tracking-exposed/web-extension") browser extension
           |, 
           a(href="https://github.com/tracking-exposed/facebook") backend
