--- a/sections/realitycheck/knowmore.pug
+++ b/sections/realitycheck/knowmore.pug
@@ -1,7 +1,12 @@
-h3 what is granted ?
-p.text Participating in this collaborative experiment permits to see how the information flows inside Facebook. Or, considering is one of the places where information worldwide flows into and is completely obscure, you are helping the society to understand itself.
+h3 Thank you, again
+p.text With the usage of the extension, you are helping
+p.text Participating in this collaborative experiment permits to see how the information flows inside Facebook. Considering Facebook as one of the places where information worldwide flows into, and it is entirely obscure, you are helping the society to understand itself (well, at least, this is what we want to belive. Then, the project has to be collaborative and find partners).
 
-h3 roadmap
+p.text
+  b Our goal is not making analysis
+  |  rather, we want enable others. 
+
+h3 Roadmap
 p.text Data stored is not personal in a sense we do not collect what the user do or send to Facebook. What we have, could implicitly reflect your interests.
 p.text Besides the privacy declaration and your willing agreement accepted when you published your key, there are few steps intended to increase the fairness of this experiment
 ol
@@ -10,8 +15,12 @@ ol
 
 p.text It is public on facebook who you follow, and we are talking about a sophisticated corporate surveillance technology: what is on facebook is lost without any hope. Still, we do not want to help any further data exploitation.
 
-h3 problems
+h3 Problems
 p.text Some data might still be lost in the collection. You can check on the section 
   i data
-  |  and see if the system is properly collecting and analyzing data. If not, you can drop a message to the facebook page (or an email, or a github issue, what comes simpler)
+  |  and see if the system is properly collecting and analyzing data. If not, you can drop a message to the 
+  a(href="https://www.facebook.com/personalizationalgorithm") facebook page
+  |, or open a 
+  a(href="https://github.com/tracking-exposed/facebook") github issue
+  |  or drop an email to support﹫tracking・exposed
 
