add and changed name

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -14,10 +14,15 @@ block navbar
             li
               a(href='/') Home
             li
-              a(href='https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi', target='_blank') Get Chrome extension
+              a(href='https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi', target='_blank') Get it
             li
-              a(href='/privacy-statement') Privacy Statement
+              a(href='/impact/') Impact
+            li
+              a(href='/privacy-statement') Privacy 
+            li
+              a(href='/project') The Project 
             li
               a(href='/initiatives/') Initiatives
             li
-              a(href='/about') About Us
+              a(href='/about') Contact
+            
