add icon link out

--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -14,7 +14,10 @@ block navbar
             li
               a(href='/') Home
             li
-              a(href='https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi', target='_blank') Get it
+              a(href='https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi', target='_blank') Get it 
+                span.glyphicon.glyphicon-new-window
+                
+                
             li
               a(href='/impact/') Impact
             li
