--- a/sections/header.pug
+++ b/sections/header.pug
@@ -1,18 +1,18 @@
 block header
   
   div.container
-    div.jumbotron
+    div.topheader
       div.col-xs-8.col-sm-8.col-md-8.col-lg-8
-        p < 
-          img#logoimg(src="/images/github-256.png" width=24 height=24)
+        span < 
+          img.githublogo(src="/images/github-256.png")
           a(href="https://github.com/tracking-exposed/web-extension") browser extension
           |, 
           a(href="https://github.com/tracking-exposed/facebook") backend
           |  /> 
 
       div.col-xs-4.col-sm-4.col-md-4.col-lg-4.pull-right
-        img(vspace="20" class="jumbotronwidth" alt="logo of fbtrex" src="/images/fbtrex_logo.svg")
-      div.col-xs-8.col-sm-8.col-md-8.col-lg-8
+        img.fbtrexlogo(alt="logo of fbtrex" src="/images/fbtrex_logo.svg")
+      div.col-xs-12.col-sm-8.col-md-8.col-lg-8
         h2
           span.blue facebook
           |.
