--- a/sections/mission.pug
+++ b/sections/mission.pug
@@ -3,5 +3,5 @@ block mission
   div.left
     p Our 
       span.italic mission 
-      span is to help researchers assess how current filtering mechanisms work and how personalization algorithms should be modified in order to minimize the dangerous social effects of which they are indirectly responsible and to maximize the values, both individual and social, that algorithms should incorporate.
+      span is to help researchers assess how current filtering mechanisms work and how personalization algorithms should be modified in order to minimize the dangerous social effects.
 
