--- a/styles/index.styl
+++ b/styles/index.styl
@@ -47,10 +47,10 @@ p
   padding-bottom 2%
 
 .propaganda
-  padding-right 10%
-  padding-left 10%
+  /*padding-right 0%
+  padding-left 0%*/
   padding-bottom 2%
-  border-bottom #3c5a99 0.7em solid
+  /*border-bottom #3c5a99 0.7em solid*/
 
   h2
     border-left #3c5a99 0.01em solid
