--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -4,7 +4,9 @@ block useit
   p Install the 
     a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") chrome extension
     |, soon we'll provide the Firefox version.
-
+  p
+    a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi")    
+        img(src="./images/chromeextension.png")
   p The collected data represent a publicly accessible knowledge you can download every week. We offer some basic visualisation intended to give awarness and critical judgement to the supporters:
     ul.fb--icon-list
       li Insight on your own timeline (this is one of 
@@ -14,6 +16,4 @@ block useit
       li Analytics over the general behavior of the connected society
       li Analysis on how Personalisation Algorithm affects your reality perception
       li An Open API, so if you want create your own visualisation, you're welcome
-
-
 
