fine ritocchi home

--- a/sections/header.pug
+++ b/sections/header.pug
@@ -13,6 +13,7 @@ block header
       div.col-xs-4.col-sm-4.col-md-4.col-lg-4.pull-right
         img.fbtrexlogo(alt="logo of fbtrex" src="/images/fbtrex_logo.svg")
       div.col-xs-12.col-sm-8.col-md-8.col-lg-8
+       a(href="/")
         h2
           span.blue facebook
           |.
