--- a/sections/navbar.pug
+++ b/sections/navbar.pug
@@ -1,6 +1,6 @@
 block navbar
 
-    nav.navbar.navbar-default
+    nav.navbar.navbar-default.navbar-static-top
       div.container
         div.navbar-header
           button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
