--- a/sections/team.pug
+++ b/sections/team.pug
@@ -19,7 +19,7 @@ html
         meta(property="og:image:height" content="400")
         meta(property="og:description" content="The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only through a global and inclusive community able to critic the algorithms from multiple points of views")
 
-        title About Us
+        title Contact
 
     body
 
@@ -32,14 +32,7 @@ html
                 | We have a Facebook page, to organize experiments on the social media sphere, please join us on 
                 a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
                 |.
-            .inclusive
-                h3 The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only 
-                    b through a global and inclusive community able to critic the algorithms from multiple points of views. 
-                    |  The current team suffer this limit because the project, so far, has been presented mostly in italian and german
-                    i  
-                        a(href="/initiatives") hacker events
-                    |. This has been driven by opportunities and is not a self-segregating decision.
-
+            
         div.mainstyle
             h2 Contributor Team
             table.table.table-striped
@@ -89,6 +82,15 @@ html
                     tr
                         td Pierpaolo Pantone
                         td Parser developer
+
+            div.mainstyle
+                .inclusive
+                    h3 The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only 
+                    b through a global and inclusive community able to critic the algorithms from multiple points of views. 
+                    |  The current team suffer this limit because the project, so far, has been presented mostly in italian and german
+                    i  
+                        a(href="/initiatives") hacker events
+                    |. This has been driven by opportunities and is not a self-segregating decision.
 
 
         div.footer 
