mi ero sovrascritta tutti i css mannaggiai carlini

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -46,11 +46,6 @@ p
   padding-left 10%
   padding-bottom 2%
 
-.propaganda
-  /*padding-right 0%
-  padding-left 0%*/
-  padding-bottom 2%
-  /*border-bottom #3c5a99 0.7em solid*/
 
   h2
     border-left #3c5a99 0.01em solid
@@ -167,3 +162,36 @@ p
   font-weight 400
   src local('Work Sans'), url(/js/local/WorkSans.ttf) format('truetype');
 
+  /*header*/
+
+.githublogo{
+    width:20px;
+    height:auto;
+}
+.fbtrexlogo{
+    border: solid 1px #ccc;
+    border-radius: 10%;
+    padding: 1em;
+    width: 5em;
+    background-color: lightyellow;
+}
+.topheader {
+    margin: 2% 0;
+}
+.icontext{
+    text-align:center;
+}
+.icon{
+    width:70px;
+    margin:0 50%;
+    -webkit-transform:translate(-50%,0);
+    transform:translate(-50%,0);
+}
+.propaganda {
+    padding-bottom: 2%;
+    border-bottom: dotted #3c5a99 10px;
+    margin: 2em 0;
+}
+#vision, #mission {
+    margin: 2em 0;
+}
