--- a/styles/index.styl
+++ b/styles/index.styl
@@ -195,3 +195,10 @@ p
 #vision, #mission {
     margin: 2em 0;
 }
+
+.fb--icon-list > li {
+    margin-left: 7%;
+    text-indent: 1em;
+    line-height: 2em;
+}
+
