riga blue indentatura ul li

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -189,7 +189,7 @@ p
 }
 .propaganda {
     padding-bottom: 2%;
-    border-bottom: dotted #3c5a99 10px;
+    border-bottom: solid #3c5a99 1px;
     margin: 2em 0;
 }
 #vision, #mission {
@@ -198,7 +198,6 @@ p
 
 .fb--icon-list > li {
     margin-left: 7%;
-    text-indent: 1em;
     line-height: 2em;
 }
 
