last fixes and extended config.json

--- a/sections/team.pug
+++ b/sections/team.pug
@@ -87,7 +87,7 @@ html
                 .inclusive
                     h3 The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only 
                     b through a global and inclusive community able to critic the algorithms from multiple points of views. 
-                    |  The current team suffer this limit because the project, so far, has been presented mostly in italian and german
+                    |  The current team suffer this limit because has collect interest, so far only after italian and german
                     i  
                         a(href="/initiatives") hacker events
                     |. This has been driven by opportunities and is not a self-segregating decision.
