--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -9,7 +9,7 @@ block useit
         img(src="./images/chromeextension.png")
   p The collected data represent a publicly accessible knowledge you can download every week. We offer some basic visualisation intended to give awarness and critical judgement to the supporters:
     ul.fb--icon-list
-      li Insight on your own timeline (and you can download your metadata in reusable format)
+      li Insight on your own timeline (so far, you can download your metadata)
       li Insight about the promotional content you are exposed
       li Analytics over the general behavior of the connected society
       li Analysis on how Personalisation Algorithm affects your reality perception
