--- a/sections/team.pug
+++ b/sections/team.pug
@@ -10,8 +10,8 @@ html
         meta(charset="utf-8")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        meta(name="keywords" content="facebook.tracking.exposed initiatives, research and open data")
-        meta(property="og:title" content="facebook.tracking.exposed initiatives, research and open data")
+        meta(name="keywords" content="facebook.tracking.exposed contacts, about us")
+        meta(property="og:title" content="facebook.tracking.exposed contacts, about us")
         meta(property="og:type" content="website")
         meta(property="og:url" content="https://facebook.tracking.exposed")
         meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
@@ -19,7 +19,7 @@ html
         meta(property="og:image:height" content="400")
         meta(property="og:description" content="The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only through a global and inclusive community able to critic the algorithms from multiple points of views")
 
-        title Contact
+        title Contact, About Us
 
     body
 
@@ -82,6 +82,11 @@ html
                     tr
                         td Pierpaolo Pantone
                         td Parser developer
+                    tr
+                        td Giovanni Civardi (
+                            a(href="https://twitter.com/@ciaby" target="_blank") ciaby
+                            |)
+                        td lazy sysadmin
 
             div.mainstyle
                 .inclusive
