fixed the same type of yesterday?

--- a/sections/project.pug
+++ b/sections/project.pug
@@ -31,7 +31,7 @@ html
 
         ul.fb--icon-list 
             li The ways in which FB selects information to be presented to individual users are not well understood.
-            li Algorithms are like social policies; they shoul.fb--icon-listd be available for public scrutiny
+            li Algorithms are like social policies; they should be available for public scrutiny
             li Users has been used as rats lab in psychological and social experiments.
             li Among all the algorithms crossing our life, Facebook's coordinate how people perceive the reality; besides the enormous audience, it is personalized, making it even harder to scrutiny.
             li How the data are treated, assimilated, analyzed, used and re-purposed is not said by Facebook Data Policy.
