SHA2017 slides done

--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -60,6 +60,15 @@ html
             th Language
         tbody
            tr
+            td 7th August '17
+            td
+              a(href="http://www.journalismfestival.com/programme/2017/exposing-what-facebook-wants-you-to-see") SHA2017
+            td
+              a(href="https://github.com/tracking-exposed/presentation/blob/master/FBTREX-SHA-2017.pdf") preview & PDF 
+            td
+              a(href="https://www.youtube.com/watch?v=ct9d-o7NrSg") 35 mins video + Q&A
+        tbody
+           tr
             td 8th April '17
             td
               a(href="http://www.journalismfestival.com/programme/2017/exposing-what-facebook-wants-you-to-see") International Journalism Festival, Perugia
