--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -7,7 +7,7 @@ block useit
   p
     a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi")    
         img(src="./images/chromeextension.png")
-  p The collected data represent a publicly accessible knowledge you can download every week. We offer some basic visualisation intended to give awarness and critical judgement to the supporters:
+  p The collected data represent a publicly accessible knowledge you can download every week. We offer some basic visualisation intended to give awareness and critical judgement to the supporters:
     ul.fb--icon-list
       li Insight on your own timeline (so far, you can download your metadata)
       li Insight about the promotional content you are exposed
