--- a/sections/project.pug
+++ b/sections/project.pug
@@ -42,7 +42,7 @@ html
         h2 What are the goals
         p Overall
         ul.fb--icon-list
-            li To observe, evaluate, and better understand Facebook algorithm, in particul how FB leverages and profits from promoted content.
+            li To observe, evaluate, and better understand Facebook algorithm, in particular how FB leverages and profits from promoted content.
             li To develop awareness on how Facebook operate the business of promoted contents.
             li To enable researchers from non-technical fields to analyze the social media.
         p For users of FB
@@ -64,7 +64,8 @@ html
             li Overall, the approach is based on broadly distributed collection of individual user experiences with FB feeds from their respective observation points, utilizing a networks of volunteers and bots
             li Using a web-extension, we will collect data on what each user sees on their public timeline.
             li Extract the metadata from the data submitted, and make this dataset available to researchers.
-            li Produce visualizations and other renderings of how different users experience the FB algorithm.
+            li Produce visualizations and 
+            renderings of how different users experience the FB algorithm.
             li Use research findings to inform both advocacy and user education.
 
         h2 What needs to be done next? 
