adding language to SHA2017

--- a/sections/talks/landing.pug
+++ b/sections/talks/landing.pug
@@ -67,6 +67,7 @@ html
               a(href="https://github.com/tracking-exposed/presentation/blob/master/FBTREX-SHA-2017.pdf") preview & PDF 
             td
               a(href="https://www.youtube.com/watch?v=ct9d-o7NrSg") 35 mins video + Q&A
+            td English
         tbody
            tr
             td 8th April '17
