--- a/sections/project.pug
+++ b/sections/project.pug
@@ -64,8 +64,7 @@ html
             li Overall, the approach is based on broadly distributed collection of individual user experiences with FB feeds from their respective observation points, utilizing a networks of volunteers and bots
             li Using a web-extension, we will collect data on what each user sees on their public timeline.
             li Extract the metadata from the data submitted, and make this dataset available to researchers.
-            li Produce visualizations and 
-            renderings of how different users experience the FB algorithm.
+            li Produce visualizations and renderings of how different users experience the FB algorithm.
             li Use research findings to inform both advocacy and user education.
 
         h2 What needs to be done next? 
