added firefox link

--- a/sections/useit.pug
+++ b/sections/useit.pug
@@ -2,8 +2,13 @@ block useit
   h2 Use It!
 
   p Install the 
-    a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") chrome extension
-    |, soon we'll provide the Firefox version.
+    a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") chrome
+    |, or the 
+    a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/") Firefox extension
+    |.
+  p
+    a(target="_blank" href="https://addons.mozilla.org/en-US/firefox/addon/facebook-tracking-exposed/")    
+        img(src="./images/firefoxextension.png")
   p
     a(target="_blank" href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi")    
         img(src="./images/chromeextension.png")
